2010-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-indent-offset-rule): Rename from
	smie-indent-offset-after.  Add :prev case.  Make a bit more generic.
	(smie-indent-virtual): Remove `virtual' arg.  Update callers.
	(smie-indent-keyword): Add handling of open-paren keywords.
	(smie-indent-comment-continue): Don't assume comment-continue.

2010-06-07  Martin Rudalics  <rudalics@gmx.at>

	* window.el (pop-to-buffer): Remove the conditional that
	compares new-window and old-window, so it will reselect
	the selected window unconditionally.
	http://lists.gnu.org/archive/html/emacs-devel/2010-06/msg00078.html

2010-06-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el (smie-indent-offset-after)
	(smie-indent-forward-token, smie-indent-backward-token): New functions.
	(smie-indent-after-keyword): Use them.
	(smie-indent-fixindent): Only applies to the indentation of the BOL.
	(smie-indent-keyword): Tweak the black magic.
	(smie-indent-comment-continue): Strip comment-continue before use.
	(smie-indent-functions): Indent comments before keywords.

2010-06-06  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-lazy-highlight-search): Fix looping
	by checking for empty match.  This syncs this loop with the
	similar loop in `isearch-search'.  (Bug#6362)

2010-06-05  Dan Nicolaescu  <dann@ics.uci.edu>

	vc-log-incoming/vc-log-outgoing fixes for Git.
	* vc-git.el (vc-git-log-view-mode): Fix font lock for
	incoming/outgoing logs.
	(vc-git-log-outgoing, vc-git-log-incoming): Use @{upstream}
	instead of vc-git-compute-remote.
	(vc-git-compute-remote): Remove.

2010-06-04  Juri Linkov  <juri@jurta.org>

	* simple.el (kill-new): Fix logic of kill-do-not-save-duplicates.
	Instead of setting `replace' to t and replacing the same string
	with itself, don't do certain actions when
	kill-do-not-save-duplicates is non-nil and string is equal to car
	of kill-ring: don't call menu-bar-update-yank-menu, don't push